ZYB-77 Chemigation Landing Page Stub out new chemigation landing page and api endpoint for chemigation inspection summaries
